// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. modal image 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <View
        pointerEvents="box-none"
      />
      <View>
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <View
        pointerEvents="box-none"
      >
        <ImageZoomView
          imageUrls={
            Array [
              Object {
                "url": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0",
              },
            ]
          }
        />
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View>
      <Image
        borderRadius={0}
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. modal image with no caption 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <View
        pointerEvents="box-none"
      />
      <View>
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <View
        pointerEvents="box-none"
      >
        <ImageZoomView
          imageUrls={
            Array [
              Object {
                "url": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0",
              },
            ]
          }
        />
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View
      accessibilityIgnoresInvertColors={true}
    >
      <Image
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`3. modal image with custom highressize 1`] = `
<View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    presentationStyle="fullScreen"
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    visible={false}
  >
    <View>
      <View
        pointerEvents="box-none"
      />
      <View>
        <View
          focusable={true}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/image/assets/close-button.png",
              }
            }
          />
        </View>
      </View>
      <View
        pointerEvents="box-none"
      >
        <ImageZoomView
          imageUrls={
            Array [
              Object {
                "url": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0",
              },
            ]
          }
        />
      </View>
    </View>
  </Modal>
  <View
    focusable={true}
  >
    <View>
      <Image
        borderRadius={0}
        fadeDuration={0}
        source={
          Object {
            "testUri": "../../../packages/responsive-image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;
